--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel": "^5.8.29",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.21.0",
+    "imports-loader": "^0.6.5",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2"
   },
