Rework for react

--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "history": "^1.13.0",
     "jquery": "^2.1.4",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-router": "^1.0.0-rc4",
     "snapsvg": "^0.4.0"
   }
 }
