--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^5.3.2",
     "css-loader": "^0.21.0",
     "imports-loader": "^0.6.5",
+    "json-loader": "^0.5.3",
     "node-sass": "^3.4.1",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
