--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel": "^5.8.29",
     "babel-loader": "^5.3.2",
+    "bundle-loader": "^0.5.4",
     "css-loader": "^0.21.0",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.3",
